@startuml
skinparam classAttributeIconSize 0

package "agvdigitaltwin"{
class AGVDigitalTwinApp{
}
}

package "agvmanager"{
class AGVManagerServer{
}
class AgvManagerThread{
+AgvManagerThread()
+run()
-moveAroundWarehouse( xActual, yActual, xProduct, yProduct, time)
-moveRight( xActual, yActual, notify, time)
-moveLeft( xActual, yActual, notify, time)
-moveUp( xActual, yActual, notify, time)
-moveDown( xActual, yActual, notify, time)
}
}

package "Application"{
class GetProductLocationController{
+getProductLocation()
+getAgvLocation(id)
+getAccessibility(row)
+setOrderReady(order)
+freeAGV(id)
-occupyAGV(agv)
}
}

package "Application"{
class BuildWarehouseController{
+getWarehouseMatrix()
-setAisleInWarehouse(matrix,warehouse)
-setAgvDocksInWarehouse(matrix,warehouse)
}
}

package "Domain"{
class Warehouse{
}
}


package "Persistence"{
class PersistenceContext{
+repositories()
}
}

package "Factory"{
class RepositoryFactory{
}
}

package "Repository"{
class WarehouseRepository{
+findWarehouse()
}

}

BuildWarehouseController .--> PersistenceContext
PersistenceContext .--> RepositoryFactory
RepositoryFactory .--> WarehouseRepository
WarehouseRepository .--> Warehouse
BuildWarehouseController .--> Warehouse
AGVManagerServer .-> AgvManagerThread
AGVDigitalTwinApp .-> AGVManagerServer
AgvManagerThread .-> GetProductLocationController
AgvManagerThread .-> BuildWarehouseController
GetProductLocationController .-> PersistenceContext
GetProductLocationController .-> Warehouse


@enduml